--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <!-- Lucide Icons CDN for modern, customizable icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
+    <!-- D3.js CDN for dynamic data visualization -->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
         /* Custom styles for the Three.js canvas to place it in the background */
         #three-background {
@@ -178,7 +180,6 @@
             box-shadow: 0 0 0 2px rgba(99, 179, 237, 0.5); /* Blue shadow for focus */
         }
 
-
         /* Mobile navigation menu styles */
         .mobile-menu-overlay {
             position: fixed;
@@ -230,6 +231,74 @@
             font-size: 2rem;
             cursor: pointer;
             z-index: 60;
+        }
+
+        /* D3.js Chart specific styles */
+        .chart-container {
+            width: 100%;
+            padding-top: 50%; /* 2:1 Aspect Ratio (height is 50% of width) */
+            position: relative;
+            margin-top: 2rem;
+            background-color: rgba(255, 255, 255, 0.7);
+            border-radius: 0.75rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        body.dark-mode .chart-container {
+            background-color: rgba(45, 55, 72, 0.7);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+        }
+
+        .chart-container svg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        .bar {
+            fill: #3b82f6; /* Default bar color */
+            transition: fill 0.3s ease;
+        }
+
+        .bar:hover {
+            fill: #2563eb; /* Darker blue on hover */
+        }
+
+        .axis text {
+            font-size: 0.8rem;
+            fill: #333; /* Default axis text color */
+        }
+
+        body.dark-mode .axis text {
+            fill: #e2e8f0; /* Light text for dark mode */
+        }
+
+        .axis path,
+        .axis line {
+            stroke: #94a3b8; /* Default axis line color */
+            shape-rendering: crispEdges;
+        }
+
+        body.dark-mode .axis path,
+        body.dark-mode .axis line {
+            stroke: #a0aec0; /* Lighter line for dark mode */
+        }
+
+        .tooltip {
+            position: absolute;
+            text-align: center;
+            padding: 0.5rem;
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            border-radius: 0.5rem;
+            pointer-events: none;
+            font-size: 0.9rem;
+            z-index: 100;
+            opacity: 0;
+            transition: opacity 0.2s ease;
         }
     </style>
 </head>
@@ -380,6 +449,8 @@
                     </tbody>
                 </table>
             </div>
+            <!-- Microscopes Chart Container -->
+            <div id="microscopes-chart-container" class="chart-container"></div>
         </section>
 
         <!-- Equipment Section -->
@@ -407,6 +478,8 @@
                     </tbody>
                 </table>
             </div>
+            <!-- Equipment Chart Container -->
+            <div id="equipment-chart-container" class="chart-container"></div>
         </section>
 
         <!-- Glassware Section -->
@@ -433,6 +506,8 @@
                     </tbody>
                 </table>
             </div>
+            <!-- Glassware Chart Container -->
+            <div id="glassware-chart-container" class="chart-container"></div>
         </section>
 
         <!-- Reagents Section -->
@@ -465,6 +540,8 @@
                     </tbody>
                 </table>
             </div>
+            <!-- Reagents Chart Container -->
+            <div id="reagents-chart-container" class="chart-container"></div>
         </section>
 
         <!-- Histological Samples Section -->
@@ -493,6 +570,8 @@
                     </tbody>
                 </table>
             </div>
+            <!-- Samples Chart Container -->
+            <div id="samples-chart-container" class="chart-container"></div>
         </section>
     </main>
 
@@ -704,67 +783,6 @@
 
             // Render the scene with the camera
             renderer.render(scene, camera);
-        }
-
-        // --- Lab Data Loading ---
-        // Function to fetch and render data
-        async function loadAndRenderData() {
-            try {
-                // Fetch the JSON data from the 'data.json' file in the same directory
-                const response = await fetch('data.json');
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-                const labData = await response.json(); // Parse the JSON response
-
-                // Render all data tables using the fetched data
-                renderTable(
-                    labData.microscopes, // Access the 'microscopes' array from the JSON
-                    'microscopes-table-body',
-                    ['id', 'brand', 'model', 'type', 'status', 'location', 'notes'],
-                    'search-microscopios',
-                    getMicroscopeStatusClass
-                );
-
-                renderTable(
-                    labData.equipment, // Access the 'equipment' array
-                    'equipment-table-body',
-                    ['name', 'location', 'function'],
-                    'search-equipos'
-                );
-
-                renderTable(
-                    labData.glassware, // Access the 'glassware' array
-                    'glassware-table-body',
-                    ['type', 'description'],
-                    'search-material-vidrio'
-                );
-
-                renderTable(
-                    labData.reagents, // Access the 'reagents' array
-                    'reagents-table-body',
-                    ['name', 'formula', 'quantity', 'unit', 'expiration', 'supplier', 'storage', 'hazard'],
-                    'search-reactivos'
-                );
-
-                renderTable(
-                    labData.samples, // Access the 'samples' array
-                    'samples-table-body',
-                    ['box', 'type', 'notes'],
-                    'search-muestras',
-                    null,
-                    true
-                );
-
-            } catch (error) {
-                console.error('Error loading lab data:', error);
-                // Optionally, display an error message to the user on the page
-                const mainContent = document.querySelector('main');
-                const errorMessage = document.createElement('p');
-                errorMessage.className = 'text-red-500 text-center text-xl mt-8';
-                errorMessage.textContent = 'No se pudieron cargar los datos del laboratorio. Por favor, inténtalo de nuevo más tarde.';
-                mainContent.prepend(errorMessage);
-            }
         }
 
         /**
@@ -981,6 +999,243 @@
             }
         });
 
+        // --- D3.js Chart Functions ---
+
+        /**
+         * Renders a bar chart in the specified container.
+         * @param {Array<Object>} data - The dataset for the chart.
+         * @param {string} containerId - The ID of the HTML element where the chart will be rendered.
+         * @param {string} categoryKey - The key in the data objects to use for categories (X-axis).
+         * @param {string} valueLabel - The label for the value (Y-axis).
+         */
+        function renderBarChart(data, containerId, categoryKey, valueLabel) {
+            const container = d3.select(`#${containerId}`);
+            container.html(''); // Clear any existing chart
+
+            const parentWidth = container.node().getBoundingClientRect().width;
+            const parentHeight = parentWidth * 0.5; // Maintain 2:1 aspect ratio
+            
+            const margin = { top: 20, right: 30, bottom: 80, left: 60 }; // Increased bottom margin for labels
+            const width = parentWidth - margin.left - margin.right;
+            const height = parentHeight - margin.top - margin.bottom;
+
+            const svg = container.append("svg")
+                .attr("width", parentWidth)
+                .attr("height", parentHeight)
+                .append("g")
+                .attr("transform", `translate(${margin.left},${margin.top})`);
+
+            // Aggregate data
+            const aggregatedData = d3.rollup(data, v => v.length, d => d[categoryKey]);
+            const chartData = Array.from(aggregatedData, ([key, value]) => ({ category: key, count: value }));
+
+            // Sort data by count descending
+            chartData.sort((a, b) => b.count - a.count);
+
+            // Scales
+            const x = d3.scaleBand()
+                .domain(chartData.map(d => d.category))
+                .range([0, width])
+                .padding(0.1);
+
+            const y = d3.scaleLinear()
+                .domain([0, d3.max(chartData, d => d.count) || 0])
+                .range([height, 0]);
+
+            // Axes
+            const xAxis = svg.append("g")
+                .attr("class", "axis x-axis")
+                .attr("transform", `translate(0,${height})`)
+                .call(d3.axisBottom(x))
+                .selectAll("text")
+                .attr("transform", "rotate(-45)")
+                .style("text-anchor", "end");
+
+            const yAxis = svg.append("g")
+                .attr("class", "axis y-axis")
+                .call(d3.axisLeft(y).ticks(Math.min(5, d3.max(chartData, d => d.count) || 0)).tickFormat(d3.format("d"))); // Ensure integer ticks
+
+            // Bars
+            svg.selectAll(".bar")
+                .data(chartData)
+                .enter().append("rect")
+                .attr("class", "bar")
+                .attr("x", d => x(d.category))
+                .attr("y", d => y(d.count))
+                .attr("width", x.bandwidth())
+                .attr("height", d => height - y(d.count))
+                .on("mouseover", function(event, d) {
+                    d3.select(this).attr("fill", "#1e40af"); // Darker blue on hover
+                    tooltip.transition().duration(200).style("opacity", .9);
+                    tooltip.html(`<strong>${d.category}</strong>: ${d.count} ${valueLabel}`)
+                        .style("left", (event.pageX + 10) + "px")
+                        .style("top", (event.pageY - 28) + "px");
+                })
+                .on("mouseout", function() {
+                    d3.select(this).attr("fill", "#3b82f6"); // Restore original color
+                    tooltip.transition().duration(500).style("opacity", 0);
+                });
+
+            // Add Y-axis label
+            svg.append("text")
+                .attr("class", "axis-label")
+                .attr("transform", "rotate(-90)")
+                .attr("y", 0 - margin.left + 15)
+                .attr("x", 0 - (height / 2))
+                .attr("dy", "1em")
+                .style("text-anchor", "middle")
+                .text("Cantidad");
+
+            // Add X-axis label
+            svg.append("text")
+                .attr("class", "axis-label")
+                .attr("transform", `translate(${width / 2}, ${height + margin.bottom - 10})`)
+                .style("text-anchor", "middle")
+                .text(categoryKey);
+
+            // Tooltip element
+            const tooltip = d3.select("body").append("div")
+                .attr("class", "tooltip")
+                .style("opacity", 0);
+
+            // Update axis text color based on theme
+            function updateChartTheme() {
+                const isDarkMode = document.body.classList.contains('dark-mode');
+                svg.selectAll(".axis text")
+                    .style("fill", isDarkMode ? "#e2e8f0" : "#333");
+                svg.selectAll(".axis path, .axis line")
+                    .style("stroke", isDarkMode ? "#a0aec0" : "#94a3b8");
+            }
+
+            // Initial theme update and listen for changes
+            updateChartTheme();
+            const themeToggle = document.getElementById('theme-toggle');
+            if (themeToggle) {
+                themeToggle.addEventListener('click', updateChartTheme);
+            }
+        }
+
+        // --- Lab Data Loading ---
+        // Function to fetch and render data
+        async function loadAndRenderData() {
+            try {
+                // Fetch the JSON data from the 'data.json' file in the same directory
+                const response = await fetch('data.json');
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+                const labData = await response.json(); // Parse the JSON response
+
+                // Render all data tables
+                renderTable(
+                    labData.microscopes,
+                    'microscopes-table-body',
+                    ['id', 'brand', 'model', 'type', 'status', 'location', 'notes'],
+                    'search-microscopios',
+                    getMicroscopeStatusClass
+                );
+                // Render microscope chart
+                renderBarChart(labData.microscopes, 'microscopes-chart-container', 'status', 'Microscopios');
+
+                renderTable(
+                    labData.equipment,
+                    'equipment-table-body',
+                    ['name', 'location', 'function'],
+                    'search-equipos'
+                );
+                // Render equipment chart
+                renderBarChart(labData.equipment, 'equipment-chart-container', 'location', 'Equipos');
+
+
+                renderTable(
+                    labData.glassware,
+                    'glassware-table-body',
+                    ['type', 'description'],
+                    'search-material-vidrio'
+                );
+                // Render glassware chart
+                renderBarChart(labData.glassware, 'glassware-chart-container', 'type', 'Unidades');
+
+
+                renderTable(
+                    labData.reagents,
+                    'reagents-table-body',
+                    ['name', 'formula', 'quantity', 'unit', 'expiration', 'supplier', 'storage', 'hazard'],
+                    'search-reactivos'
+                );
+                // Render reagents chart
+                renderBarChart(labData.reagents, 'reagents-chart-container', 'hazard', 'Reactivos');
+
+
+                renderTable(
+                    labData.samples,
+                    'samples-table-body',
+                    ['box', 'type', 'notes'],
+                    'search-muestras',
+                    null,
+                    true
+                );
+                // Render samples chart
+                renderBarChart(labData.samples, 'samples-chart-container', 'type', 'Muestras');
+
+
+            } catch (error) {
+                console.error('Error loading lab data:', error);
+                // Optionally, display an error message to the user on the page
+                const mainContent = document.querySelector('main');
+                const errorMessage = document.createElement('p');
+                errorMessage.className = 'text-red-500 text-center text-xl mt-8';
+                errorMessage.textContent = 'No se pudieron cargar los datos del laboratorio. Por favor, inténtalo de nuevo más tarde.';
+                mainContent.prepend(errorMessage);
+            }
+        }
+
+        /**
+         * Determines the appropriate CSS class for a microscope's status based on its 'status' property.
+         * @param {Object} microscope - The microscope object.
+         * @returns {string} The CSS class string.
+         */
+        function getMicroscopeStatusClass(microscope) {
+            if (microscope.status.includes('Excelente')) {
+                return 'text-green-600 font-medium';
+            } else if (microscope.status.includes('Buen')) {
+                return 'text-blue-600 font-medium';
+            } else if (microscope.status.includes('Aceptable')) {
+                return 'text-yellow-600 font-medium';
+            } else if (microscope.status.includes('Requiere') || microscope.status.includes('Mal')) {
+                return 'text-red-600 font-medium';
+            }
+            return 'text-gray-700'; // Default color if status doesn't match
+        }
+
+        // --- Mobile Menu Functionality ---
+        document.addEventListener('DOMContentLoaded', () => {
+            const menuToggle = document.getElementById('menu-toggle');
+            const mobileMenuOverlay = document.getElementById('mobile-menu-overlay');
+            const closeMenuButton = document.getElementById('close-menu');
+            const mobileNavLinks = document.querySelectorAll('.mobile-nav-link');
+
+            if (menuToggle && mobileMenuOverlay && closeMenuButton) {
+                menuToggle.addEventListener('click', () => {
+                    mobileMenuOverlay.classList.add('open');
+                    document.body.style.overflow = 'hidden'; // Prevent scrolling when menu is open
+                });
+
+                closeMenuButton.addEventListener('click', () => {
+                    mobileMenuOverlay.classList.remove('open');
+                    document.body.style.overflow = ''; // Restore scrolling
+                });
+
+                // Close menu when a link is clicked
+                mobileNavLinks.forEach(link => {
+                    link.addEventListener('click', () => {
+                        mobileMenuOverlay.classList.remove('open');
+                        document.body.style.overflow = '';
+                    });
+                });
+            }
+        });
+
         // --- Theme Toggle Functionality ---
         // Function to set the theme
         function setTheme(theme) {
@@ -1027,8 +1282,22 @@
                 const newTheme = currentTheme === 'light' ? 'dark' : 'light';
                 setTheme(newTheme);
             });
+
+            // Add a resize listener to re-render charts when the window size changes
+            let resizeTimer;
+            window.addEventListener('resize', () => {
+                clearTimeout(resizeTimer);
+                resizeTimer = setTimeout(() => {
+                    // Re-render charts to adapt to new dimensions
+                    if (document.body.classList.contains('dark-mode')) {
+                         setTheme('dark'); // Re-apply dark theme to update chart colors
+                    } else {
+                        setTheme('light'); // Re-apply light theme to update chart colors
+                    }
+                    loadAndRenderData(); // This will re-render tables and charts
+                }, 250); // Debounce for 250ms
+            });
         };
     </script>
 </body>
 </html>
-
